; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_tty_inq.c_ttyinq_line_iterate_from_reprintpos.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_tty_inq.c_ttyinq_line_iterate_from_reprintpos.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ttyinq = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ttyinq_line_iterate_from_reprintpos(%struct.ttyinq* %0, i32* %1, i8* %2) #0 {
  %4 = alloca %struct.ttyinq*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  store %struct.ttyinq* %0, %struct.ttyinq** %4, align 8
  store i32* %1, i32** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load %struct.ttyinq*, %struct.ttyinq** %4, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = load i8*, i8** %6, align 8
  %10 = load %struct.ttyinq*, %struct.ttyinq** %4, align 8
  %11 = getelementptr inbounds %struct.ttyinq, %struct.ttyinq* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.ttyinq*, %struct.ttyinq** %4, align 8
  %14 = getelementptr inbounds %struct.ttyinq, %struct.ttyinq* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @ttyinq_line_iterate(%struct.ttyinq* %7, i32* %8, i8* %9, i32 %12, i32 %15)
  ret void
}

declare dso_local i32 @ttyinq_line_iterate(%struct.ttyinq*, i32*, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
